# FeatherCNNEx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  astyle_align.sh  build_all.sh  build_android_arm32.sh  build_demo.sh  build_demo32gcc.sh  build_demo64.sh  build_demo64gcc.sh
android_demo/: README.txt
android_demo/FeatherCNNExDemo/: gradle.properties
android_demo/FeatherCNNExDemo/app/: CMakeLists.txt  build.gradle
android_demo/FeatherCNNExDemo/app/src/androidTest/java/com/example/lee/feathercnnexdemo/: ExampleInstrumentedTest.java
android_demo/FeatherCNNExDemo/app/src/main/: AndroidManifest.xml
android_demo/FeatherCNNExDemo/app/src/main/cpp/: com_example_lee_feathercnnexdemo_JniActivity.h  featherCNNEx.cpp  label1000.h  native-lib.cpp
android_demo/FeatherCNNExDemo/app/src/main/cpp/feather32gcc/include/: layer.h  mempool.h
android_demo/FeatherCNNExDemo/app/src/main/cpp/feather64gcc/include/: common.h
android_demo/FeatherCNNExDemo/app/src/main/java/com/example/lee/feathercnnexdemo/: JavaActivity.java  JniActivity.java  RuntimeArgs.java
android_demo/FeatherCNNExDemo/app/src/main/res/layout/: activity_java.xml  activity_jni.xml
android_demo/FeatherCNNExDemo/app/src/main/res/values/: strings.xml
android_demo/FeatherCNNExDemo/app/src/test/java/com/example/lee/feathercnnexdemo/: ExampleUnitTest.java
build_scripts/: linux-hi3516.toolchain.cmake
src/: CMakeLists.txt  blob.cpp  blob.h  common.cpp  common.h  common_utils.cpp  feather_simple_generated.h  fix.h  im2col.cpp  layer.cpp  layer.h  layer_factory.cpp  layer_factory.h  mempool.cpp  mempool.h  neon_mathfun.h  net.cpp  net.h  resizeNeon.h  rt_param.h  tinyDWConv.h  tinySgemmConv.h  utils.h
src/arm/: CMakeLists.txt  arm_utils.cpp  convdirect.h  convdw.h  convolution_1x1.cpp  convolution_3x3.cpp  convolution_3x3s2.cpp  convolution_5x5s1.cpp  convolution_5x5s2.cpp  convolution_7x7s1.cpp  convolution_7x7s2.cpp  convolutiondepthwise_3x3s1.cpp  convolutiondepthwise_3x3s2.cpp  depthwise.cpp  depthwise.h  generic_kernels.cpp  generic_kernels.h  helper.cpp  im2col_acc.S  im2col_copy.code  internalpackBFP16.S  internalpackBFix.S  internalpackBFix8.S  resizeNeon.cpp  sgemm.cpp  sgemm.h  sgemm_8x8_pack_FP16.S  sgemm_8x8_pack_fix.S  sgemm_8x8_pack_fix8.S  sgemv.cpp  sgemv.h  tensorsgemm4.S  tinyDWConv.cpp  winograd_kernels.cpp  winograd_kernels.h  winograd_kernels_F63.cpp
src/arm/sgemm/: config.h  messageQueue.h  pack.cpp  pack.h  packfp16.cpp  sgemm.cpp  thread_server.cpp  thread_server.h
src/arm/sgemm/arm32/: sgemm1xkx12_fp32.S  sgemm2xkx12_fp32.S  sgemm4xkx12_fp32.S
src/arm/sgemm/arm64/: sgemm1xkx24_fp32.S  sgemm4xkx16_fp16.S  sgemm4xkx16_fp32.S  sgemm4xkx24_fp32.S  sgemm4xkx4_fp32.S  sgemm4xkx8_fp32.S  tinySgemmConvPackB4x16_fp32_fp16_unit.S  tinySgemmConvPackB4x4_fp32_fp16_unit.S
src/crypto/: aes.cpp  aes.h
src/depthwise/: CMakeLists.txt  tinyDWConv.cpp  tinyInnerDWConv.h
src/depthwise/arm32/: tinyconvDW3x3.S  tinyconvDWPackB.S
src/flatbuffers/: base.h  code_generators.h  flatbuffers.h  flatc.h  flexbuffers.h  grpc.h  hash.h  idl.h  minireflect.h  reflection.h  reflection_generated.h  registry.h  stl_emulation.h  util.h
src/general/: generic_kernels.cpp  generic_kernels.h
src/layers/: batchnorm_layer.cpp  batchnorm_layer.h  concat_layer.cpp  concat_layer.h  conv_depthwise_layer.h  conv_direct_layer.h  conv_im2col_layer.h  conv_layer.h  conv_newdepthwise_layer.h  conv_sgemm_layer.h  conv_winogradF63_layer.h  conv_winograd_layer.h  detectionoutput_layer.h  dropout_layer.h  eltwise_layer.h  flatten_layer.h  inner_product_layer.h  input_layer.h  lrn_layer.cpp  lrn_layer.h  permute_layer.h  pooling_layer.h  prelu_layer.cpp  prelu_layer.h  priorbox_layer.h  relu6_layer.h  relu_layer.cpp  relu_layer.h  reshape_layer.h  scale_layer.cpp  scale_layer.h  sigmoid_layer.h  slice_layer.cpp  slice_layer.h  softmax_layer.cpp  softmax_layer.h
src/sgemm/: CMakeLists.txt  armNeon.h  config.h  innerTinySgemmConv.h  sgemm.cpp  thread_server.cpp  tinySgemmConv.cpp
src/sgemm/arm32/: sgemm1xkx12_fp32.S  sgemm4xkx12_fp32.S  sgemm4xkx12_fp32_align.S  sgemm4xkx4_fp32.S  sgemm4xkx4_fp32_align.S  sgemm4xkx8_fp32.S
src/sgemm/arm32-vld1/: sgemm1xkx12_fp32.S  sgemm1xkx12_fp32_align.S  sgemm2xkx12_fp32.S  sgemm2xkx12_fp32_align.S  sgemm4xkx12_fp32.S  sgemm4xkx12_fp32_align.S  sgemm4xkx4_fp32.S  sgemm4xkx4_fp32_align.S  sgemm4xkx8_fp32.S  sgemm4xkx8_fp32_align.S  tinySgemmConvPackB4x12_fp32_fp32_unit.S  tinySgemmConvPackB4x12_fp32_fp32_unit_align.S  tinySgemmConvPackB4x4_fp32_fp32_unit.S
src/sgemm/arm64/: sgemm2xkx16_fp16.S  sgemm2xkx16_fp32.S  sgemm4xkx16_fp16.S  sgemm4xkx24_fp32.S  sgemm4xkx4_fp32.S  sgemm4xkx8_fp16.S  sgemm4xkx8_fp32.S  tinySgemmConvPackB4x2_fp32_fp32_unit.S
test/: CMakeLists.txt  build-NDK.sh  build_arm32-gcc.sh  build_arm32.sh  build_arm64-gcc.sh  build_arm64.sh  label1000.h  test.cpp
test/jni/: Android.mk  Application.mk
tools/: build.sh  caffe.pb.cc  caffe.pb.h  feather_convert_caffe.cc  install_flatbuffer.sh
tools/flatbuffer_protocols/: feather_simple.fbs
